# trosyn-AI-light-demo

./: .gitignore  .mocharc.json  .pre-commit-config.yaml  API_README.md  MIGRATION_Tauri_v1_to_v2.md  README.md  STATUS.md  Taskfile.yml  WEBSOCKET_BACKEND_CHECKLIST.md  create_sync_sessions_migration.py  cypress.config.js  detailed_status.py  direct_migration.py  index.html  jest.config.js  llm-requirements.txt  loader.mjs  main.js  package-lock.json  package.json  pyproject.toml  pytest.ini  register-loader.mjs  run_api.sh  run_cypress.sh  run_frontend_tests.sh  run_security_tests.sh  run_with_node.sh  start_frontend.sh  test-db.js  test-requirements.txt  test-save-export.md  test_chunking.py  test_chunking_minimal.py  trosyn_sync.db  tsconfig.json  tsconfig.main.build.tsbuildinfo  tsconfig.main.json  tsconfig.test.json  vite.config.ts  (+1 more)
app_data/: llm.env  llm.env.example
backend/: .gitignore  alembic.ini  babel.config.cjs  db_init.py  db_init_with_defaults.py  debug_settings.py  debug_test.py  dev-server.ts  index.ts  jest.config.backup.cjs  jest.config.cjs.bak  jest.config.mjs.bak  jest.config.ts  jest.simple.cjs  jest.simple.mjs  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-api.txt  requirements-dev.txt  requirements.txt  run_server.py  setup.py  test_async_db.py  test_db.py  test_fastapi_settings.py  test_model_registration.py  test_settings.py  tsconfig.json
backend_obsolete/: .env.example  README.md  package.json
docs/: API_README.md  DOCUMENT_MANAGEMENT.md  STATUS.md  llm-integration.md
electron_obsolete/: test-electron-app.js  test-electron.js
frontend/: .mocharc.json  MIGRATION_DOCUMENT_LIST.md  babel.config.js  craco.config.js  cypress.config.js  index.html  jest.setup.js  package-lock.json  package.json  test-setup.ts  tsconfig.base.json  tsconfig.components.json  tsconfig.json  tsconfig.main.build.json  tsconfig.new.json  vite.config.ts  vitest.config.js  vitest.config.ts
migrations/: env.py
obsolete_packages/trosyn-sync/: pyproject.toml
obsolete_packages/trosyn-sync/tests/integration/: test_conflict_resolution.py
obsolete_packages/trosyn-sync/trosyn_sync/: config.py  main.py
obsolete_packages/trosyn-sync/trosyn_sync/api/dependencies/: rate_limiter.py
obsolete_packages/trosyn-sync/trosyn_sync/api/v1/: dependencies.py
obsolete_packages/trosyn-sync/trosyn_sync/api/v1/endpoints/: sync.py
obsolete_packages/trosyn-sync/trosyn_sync/auth/: security.py
obsolete_packages/trosyn-sync/trosyn_sync/discovery/: __init__.py  models.py
obsolete_packages/trosyn-sync/trosyn_sync/middleware/: security_headers.py
obsolete_packages/trosyn-sync/trosyn_sync/security/: scanner.py
obsolete_packages/trosyn-sync/trosyn_sync/storage/: dummy.py  models.py
obsolete_packages/trosyn-sync/trosyn_sync/sync/: engine.py
reports/: status_report.md
root_node_obsolete/: package-lock.json
scripts/: create_task.py  download_model.py  find_node_paths.sh  fix_test_imports.js  generate_migration.py  init_db.py  organize_tasks.sh  port-manager.js  run-test.js  run_frontend.sh  run_frontend_tests_fixed.sh  run_migration.py  run_tests.sh  run_tests_robust.sh  setup_and_run_migration.sh  setup_llm_env.sh  setup_model.sh  start-llama-server.sh  sync_tasks.py  test-file-watcher-esm.mjs  test-file-watcher.cjs  test-file-watcher.js  test_chunking_suite.py  test_gemma.py  (+7 more)
src-tauri/: Cargo.toml  bench.sh  doc-test.sh  feature-test.sh  integration-test.sh  memory-test.sh  quick-test.sh  tauri.conf.json  test-runner.sh  test-watch.sh
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: documents.rs  filesystem.rs  mod.rs
src-tauri/src/commands/tests/: filesystem_tests.rs
(+931 files in other folders)
