[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["test"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.0.0-beta.5"
tauri-plugin-dialog = "2.0.0-beta.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
anyhow = "1.0"  # Better error handling
thiserror = "1.0"  # Custom error types
rfd = "0.13"
dirs = "5.0"
tempfile = "3.3"

[dev-dependencies]
tempfile = "3.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
